force-app/main/default/objects/Management__c/fields/InjuredTypeInput__c.field-meta.xml
<CustomField>
    <fullName>InjuredTypeInput__c</fullName>
    <label>負傷者の区分（フリー入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>