force-app/main/default/objects/Management__c/fields/InjuryContent__c.field-meta.xml
<CustomField>
    <fullName>InjuryContent__c</fullName>
    <label>症状</label>
    <length>255</length>
    <type>Text</type>
</CustomField>