force-app/main/default/objects/Management__c/fields/InjurySiteSymptomsCL__c.field-meta.xml
<CustomField>
    <fullName>InjurySiteSymptomsCL__c</fullName>
    <label>部位症状</label>
    <length>255</length>
    <type>Text</type>
</CustomField>