force-app/main/default/objects/Management__c/fields/InsuranceItemMsg__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItemMsg__c</fullName>
    <label>保険種目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>