force-app/main/default/objects/Management__c/fields/InsurancePeriod1From__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod1From__c</fullName>
    <label>保険始期日①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>