force-app/main/default/objects/Management__c/fields/InsurancePeriod1ToS__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod1ToS__c</fullName>
    <label>保険終期日①（西暦）</label>
    <type>Date</type>
</CustomField>