force-app/main/default/objects/Management__c/fields/InsurancePeriod2ToS__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod2ToS__c</fullName>
    <label>保険始期日②（西暦）</label>
    <type>Date</type>
</CustomField>