force-app/main/default/objects/Management__c/fields/InsuredAndRegisteredRelation2__c.field-meta.xml
<CustomField>
    <fullName>InsuredAndRegisteredRelation2__c</fullName>
    <label>記名被保②との関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本人</fullName>
                <label>1.本人</label>
            </value>
            <value>
                <fullName>配偶者</fullName>
                <label>2.配偶者</label>
            </value>
            <value>
                <fullName>同居親族</fullName>
                <label>3.同居親族</label>
            </value>
            <value>
                <fullName>別居親族</fullName>
                <label>4.別居親族</label>
            </value>
            <value>
                <fullName>別居未婚の子</fullName>
                <label>5.別居未婚の子</label>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>Ⅰ</fullName>
            </value>
            <value>
                <fullName>Ⅱ</fullName>
            </value>
            <value>
                <fullName>Ⅲ</fullName>
            </value>
            <value>
                <fullName>Ⅳ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>