force-app/main/default/objects/Management__c/fields/InsuredAndRegisteredRelationInput2__c.field-meta.xml
<CustomField>
    <fullName>InsuredAndRegisteredRelationInput2__c</fullName>
    <label>被保険者と記名被保険者②の関係（フリー入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>