force-app/main/default/objects/Management__c/fields/InsuredNameInput__c.field-meta.xml
<CustomField>
    <fullName>InsuredNameInput__c</fullName>
    <label>被保険者名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>