force-app/main/default/objects/Management__c/fields/InsuredPersonInput1__c.field-meta.xml
<CustomField>
    <fullName>InsuredPersonInput1__c</fullName>
    <label>記名被保険者名①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>