force-app/main/default/objects/Management__c/fields/InsuredRelationInput1__c.field-meta.xml
<CustomField>
    <fullName>InsuredRelationInput1__c</fullName>
    <label>被保険者と記名被保険者①の関係（フリー入力）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>