force-app/main/default/objects/Management__c/fields/InsuredRelationLive1__c.field-meta.xml
<CustomField>
    <fullName>InsuredRelationLive1__c</fullName>
    <label>記名被保①との同居</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>同居</fullName>
            </value>
            <value>
                <fullName>別居</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>