force-app/main/default/objects/Management__c/fields/InsuredRelationLive2__c.field-meta.xml
<CustomField>
    <fullName>InsuredRelationLive2__c</fullName>
    <label>記名被保②との同居</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>同居</fullName>
                <default>true</default>
                <label>同居</label>
            </value>
            <value>
                <fullName>別居</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>