force-app/main/default/objects/Management__c/fields/InsuredSex__c.field-meta.xml
<CustomField>
    <fullName>InsuredSex__c</fullName>
    <label>性別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>男</fullName>
            </value>
            <value>
                <fullName>女</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
                <isActive>false</isActive>
                <label>不明</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>