force-app/main/default/objects/Management__c/fields/InsuredZipCode__c.field-meta.xml
<CustomField>
    <fullName>InsuredZipCode__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>