force-app/main/default/objects/Management__c/fields/IsEscapedFromBedore__c.field-meta.xml
<CustomField>
    <fullName>IsEscapedFromBedore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>離脱フラグ</label>
    <type>Checkbox</type>
</CustomField>