force-app/main/default/objects/Management__c/fields/LoadTransfer__c.field-meta.xml
<CustomField>
    <fullName>LoadTransfer__c</fullName>
    <label>ロード転送</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>