force-app/main/default/objects/Management__c/fields/LocationTypeSupplement__c.field-meta.xml
<CustomField>
    <fullName>LocationTypeSupplement__c</fullName>
    <label>場所種別（補足）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>