force-app/main/default/objects/Management__c/fields/MailLongText__c.field-meta.xml
<CustomField>
    <fullName>MailLongText__c</fullName>
    <label>メール本文（ロングテキスト）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>