force-app/main/default/objects/Management__c/fields/MailSendingStatus__c.field-meta.xml
<CustomField>
    <fullName>MailSendingStatus__c</fullName>
    <label>メール送信状況</label>
    <type>TextArea</type>
</CustomField>