force-app/main/default/objects/Management__c/fields/ManagementVOC__c.field-meta.xml
<CustomField>
    <fullName>ManagementVOC__c</fullName>
    <label>VOC管理欄</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>