force-app/main/default/objects/Management__c/fields/memoForEmail__c.field-meta.xml
<CustomField>
    <fullName>memoForEmail__c</fullName>
    <label>メール送信連絡欄</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>