force-app/main/default/objects/Management__c/fields/MessageMiscellaneousDetails__c.field-meta.xml
<CustomField>
    <fullName>MessageMiscellaneousDetails__c</fullName>
    <label>伝言・雑件詳細</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>後報告</fullName>
            </value>
            <value>
                <fullName>対象外・被害事故</fullName>
            </value>
            <value>
                <fullName>追加報告</fullName>
            </value>
            <value>
                <fullName>既報事故</fullName>
            </value>
            <value>
                <fullName>請求書類</fullName>
            </value>
            <value>
                <fullName>契約関連</fullName>
            </value>
            <value>
                <fullName>契約相違</fullName>
            </value>
            <value>
                <fullName>(代)契約内容照会</fullName>
            </value>
            <value>
                <fullName>車両入替</fullName>
            </value>
            <value>
                <fullName>ロードサービス</fullName>
            </value>
            <value>
                <fullName>現場急行</fullName>
            </value>
            <value>
                <fullName>間違い電話・直切れ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>