force-app/main/default/objects/Management__c/fields/NameCD__c.field-meta.xml
<CustomField>
    <fullName>NameCD__c</fullName>
    <label>入電者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>