force-app/main/default/objects/Management__c/fields/Necessity__c.field-meta.xml
<CustomField>
    <fullName>Necessity__c</fullName>
    <label>担当連絡要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要連絡</fullName>
                <label>要</label>
            </value>
            <value>
                <fullName>確認事項がある場合のみ連絡する旨を案内</fullName>
                <label>不要</label>
            </value>
            <value>
                <fullName>確認事項がある場合のみ</fullName>
                <isActive>false</isActive>
                <label>確認事項がある場合のみ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>