force-app/main/default/objects/Management__c/fields/Numbering__c.field-meta.xml
<CustomField>
    <fullName>Numbering__c</fullName>
    <label>ナンバリング</label>
    <length>50</length>
    <type>Text</type>
</CustomField>