force-app/main/default/objects/Management__c/fields/ObjectiveCarName__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveCarName__c</fullName>
    <label>車名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>