force-app/main/default/objects/Management__c/fields/ObjectiveClassification__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveClassification__c</fullName>
    <label>対物区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受託車両に同じ</fullName>
            </value>
            <value>
                <fullName>受託車両と異なる</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>