force-app/main/default/objects/Management__c/fields/ObjectiveDamagedPart__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveDamagedPart__c</fullName>
    <label>損害箇所（状況図反映）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>前方左</fullName>
            </value>
            <value>
                <fullName>前方中央</fullName>
            </value>
            <value>
                <fullName>前方右</fullName>
            </value>
            <value>
                <fullName>側面左</fullName>
            </value>
            <value>
                <fullName>側面右</fullName>
            </value>
            <value>
                <fullName>後方左</fullName>
            </value>
            <value>
                <fullName>後方中央</fullName>
            </value>
            <value>
                <fullName>後方右</fullName>
            </value>
            <value>
                <fullName>ルーフ</fullName>
            </value>
            <value>
                <fullName>全体</fullName>
            </value>
            <value>
                <fullName>指定パーツ一覧</fullName>
                <isActive>false</isActive>
                <label>指定パーツ一覧</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>