force-app/main/default/objects/Management__c/fields/ObjectiveDamagedPartInput__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveDamagedPartInput__c</fullName>
    <label>損害箇所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>