force-app/main/default/objects/Management__c/fields/ObjectiveNumber__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveNumber__c</fullName>
    <label>関連対物番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>