force-app/main/default/objects/Management__c/fields/ObjectiveRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveRegistrationNumber__c</fullName>
    <label>登録番号など</label>
    <length>255</length>
    <type>Text</type>
</CustomField>