force-app/main/default/objects/Management__c/fields/OperatorContractorRelation__c.field-meta.xml
<CustomField>
    <fullName>OperatorContractorRelation__c</fullName>
    <label>操縦者と契約者の関係</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本人</fullName>
                <default>true</default>
                <label>本人</label>
            </value>
            <value>
                <fullName>配偶者</fullName>
            </value>
            <value>
                <fullName>同居親族</fullName>
            </value>
            <value>
                <fullName>別居親族</fullName>
            </value>
            <value>
                <fullName>別居未婚の子</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>