force-app/main/default/objects/Management__c/fields/OperatorContractorRelationInput__c.field-meta.xml
<CustomField>
    <fullName>OperatorContractorRelationInput__c</fullName>
    <label>契約者との関係</label>
    <length>255</length>
    <type>Text</type>
</CustomField>