force-app/main/default/objects/Management__c/fields/OperatorContractorRelationMsg__c.field-meta.xml
<CustomField>
    <fullName>OperatorContractorRelationMsg__c</fullName>
    <label>契約者との関係</label>
    <length>255</length>
    <type>Text</type>
</CustomField>