force-app/main/default/objects/Management__c/fields/OperatorNameInput__c.field-meta.xml
<CustomField>
    <fullName>OperatorNameInput__c</fullName>
    <label>操縦者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>