force-app/main/default/objects/Management__c/fields/OtherAgeYot__c.field-meta.xml
<CustomField>
    <fullName>OtherAgeYot__c</fullName>
    <label>年齢</label>
    <length>50</length>
    <type>Text</type>
</CustomField>