force-app/main/default/objects/Management__c/fields/OtherDriverAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherDriverAddress__c</fullName>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>