force-app/main/default/objects/Management__c/fields/OtherDriverName__c.field-meta.xml
<CustomField>
    <fullName>OtherDriverName__c</fullName>
    <label>運転者氏名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>