force-app/main/default/objects/Management__c/fields/OtherDriverNameKana__c.field-meta.xml
<CustomField>
    <fullName>OtherDriverNameKana__c</fullName>
    <label>運転者氏名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>