force-app/main/default/objects/Management__c/fields/OtherDriverPhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>OtherDriverPhoneNumber2__c</fullName>
    <label>連絡先②</label>
    <type>Phone</type>
</CustomField>