force-app/main/default/objects/Management__c/fields/OtherInsuranceCharge__c.field-meta.xml
<CustomField>
    <fullName>OtherInsuranceCharge__c</fullName>
    <label>担当SC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>