force-app/main/default/objects/Management__c/fields/OtherInsuranceCompanyName__c.field-meta.xml
<CustomField>
    <fullName>OtherInsuranceCompanyName__c</fullName>
    <label>任意保険会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>