force-app/main/default/objects/Management__c/fields/OtherInsurancePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherInsurancePhoneNumber__c</fullName>
    <label>担当SCのTEL</label>
    <type>Phone</type>
</CustomField>