force-app/main/default/objects/Management__c/fields/OtherInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherInsurancePolicyNumber__c</fullName>
    <label>証券番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>