force-app/main/default/objects/Management__c/fields/OtherLiabilityInsurance__c.field-meta.xml
<CustomField>
    <fullName>OtherLiabilityInsurance__c</fullName>
    <label>自賠責保険会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>