force-app/main/default/objects/Management__c/fields/OtherLiabilityInsurancePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherLiabilityInsurancePhoneNumber__c</fullName>
    <label>証明書番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>