force-app/main/default/objects/Management__c/fields/OtherOurInsurance__c.field-meta.xml
<CustomField>
    <fullName>OtherOurInsurance__c</fullName>
    <label>他の当社の保険</label>
    <length>255</length>
    <type>Text</type>
</CustomField>