force-app/main/default/objects/Management__c/fields/OtherOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OtherOwnerName__c</fullName>
    <label>所有者氏名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>