force-app/main/default/objects/Management__c/fields/OtherOwnerNameKana__c.field-meta.xml
<CustomField>
    <fullName>OtherOwnerNameKana__c</fullName>
    <label>所有者氏名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>