force-app/main/default/objects/Management__c/fields/OtherOwnerPhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>OtherOwnerPhoneNumber2__c</fullName>
    <label>連絡先②</label>
    <type>Phone</type>
</CustomField>