force-app/main/default/objects/Management__c/fields/OtherPartyAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyAddress__c</fullName>
    <label>住所（相手情報）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>