force-app/main/default/objects/Management__c/fields/OtherPartyAddressYot__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyAddressYot__c</fullName>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>