force-app/main/default/objects/Management__c/fields/OtherPartyBirth__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyBirth__c</fullName>
    <label>生年月日（相手）（西暦）</label>
    <type>Date</type>
</CustomField>