force-app/main/default/objects/Management__c/fields/OtherPartyBirthW__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyBirthW__c</fullName>
    <label>生年月日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>