force-app/main/default/objects/Management__c/fields/OtherPartyContactInfoA__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyContactInfoA__c</fullName>
    <label>連絡先A</label>
    <length>40</length>
    <type>Text</type>
</CustomField>