force-app/main/default/objects/Management__c/fields/OtherPartyContactInfoB__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyContactInfoB__c</fullName>
    <label>連絡先B</label>
    <length>40</length>
    <type>Text</type>
</CustomField>