force-app/main/default/objects/Management__c/fields/OtherPartyContactInfoYot__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyContactInfoYot__c</fullName>
    <label>連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>