force-app/main/default/objects/Management__c/fields/OtherPartyContactType__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyContactType__c</fullName>
    <label>相手方の連絡先（種別）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自宅</fullName>
            </value>
            <value>
                <fullName>携帯</fullName>
            </value>
            <value>
                <fullName>会社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>