force-app/main/default/objects/Management__c/fields/OtherPartyKana__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyKana__c</fullName>
    <label>相手氏名（カナ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>