force-app/main/default/objects/Management__c/fields/OtherPartyName__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyName__c</fullName>
    <label>相手氏名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>