force-app/main/default/objects/Management__c/fields/OtherPartyNameYot__c.field-meta.xml
<CustomField>
    <fullName>OtherPartyNameYot__c</fullName>
    <label>相手氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>