force-app/main/default/objects/Management__c/fields/OtherRepairShopAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherRepairShopAddress__c</fullName>
    <label>修理工場住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>