force-app/main/default/objects/Management__c/fields/OtherRepairShopName__c.field-meta.xml
<CustomField>
    <fullName>OtherRepairShopName__c</fullName>
    <label>修理工場</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>加入修理工場</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>