force-app/main/default/objects/Management__c/fields/OtherRepairShopNameInput__c.field-meta.xml
<CustomField>
    <fullName>OtherRepairShopNameInput__c</fullName>
    <label>修理工場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>