force-app/main/default/objects/Management__c/fields/OtherRepairShopPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherRepairShopPhoneNumber__c</fullName>
    <label>修理工場TEL</label>
    <type>Phone</type>
</CustomField>