force-app/main/default/objects/Management__c/fields/OtherRequest__c.field-meta.xml
<CustomField>
    <fullName>OtherRequest__c</fullName>
    <label>相手方の要求</label>
    <type>TextArea</type>
</CustomField>