force-app/main/default/objects/Management__c/fields/OtherWorkPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherWorkPhoneNumber__c</fullName>
    <label>勤務先TEL</label>
    <type>Phone</type>
</CustomField>