force-app/main/default/objects/Management__c/fields/OtherWorkPlace__c.field-meta.xml
<CustomField>
    <fullName>OtherWorkPlace__c</fullName>
    <label>勤務先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>