force-app/main/default/objects/Management__c/fields/OutputFileList__c.field-meta.xml
<CustomField>
    <fullName>OutputFileList__c</fullName>
    <label>出力ファイル一覧</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>