force-app/main/default/objects/Management__c/fields/OutputFlg__c.field-meta.xml
<CustomField>
    <fullName>OutputFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>帳票出力済みフラグ</label>
    <type>Checkbox</type>
</CustomField>