force-app/main/default/objects/Management__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <label>所有者氏名（漢字）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>