force-app/main/default/objects/Management__c/fields/OwnerPhoneNumber1__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhoneNumber1__c</fullName>
    <label>連絡先①</label>
    <type>Phone</type>
</CustomField>