force-app/main/default/objects/Management__c/fields/OwnerPhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhoneNumber2__c</fullName>
    <label>連絡先②</label>
    <type>Phone</type>
</CustomField>