force-app/main/default/objects/Management__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <label>部位</label>
    <length>100</length>
    <type>Text</type>
</CustomField>